<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/secundaryColor"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:background="@color/firstColor"
        android:layout_marginTop="10dp"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/libreriadigital"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/idbook"
        android:textAlignment="center"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/etCodBook"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/inputidbook"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"/>
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/etNameBook"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/inputnamebook"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:drawableEnd="@drawable/baseline_menu_book_24"/>
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/coste"
        android:textAlignment="center"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/etCosteBook"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/inputcostebook"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:drawableEnd="@drawable/baseline_attach_money_24"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/available"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textStyle="bold" />

    <!--Este spinner va la opcion de disponible o no diponible-->
    <Spinner
        android:id="@+id/spAvailableBook"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibSave"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_save_24"
            android:contentDescription="boton de descripcion"
            />
        <ImageButton
            android:id="@+id/ibSearch"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_search_24"
            android:contentDescription="boton de buscar"
            />
        <!--
        <ImageButton
            android:id="@+id/ibEdit"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_edit_square_24"
            android:contentDescription="boton de editar"
            />
         -->

    </LinearLayout>

<!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibDelete"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_delete_24"
            android:contentDescription="boton de borrar"
            />
        <ImageButton
            android:id="@+id/ibList"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_view_list_24"
            android:contentDescription="boton de lista"
            />
    </LinearLayout>
-->

</LinearLayout>